kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kyuka-web-svc-dev
  namespace: witeseb
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: kyuka-web-dev
  type: ClusterIP
